Fixed eager date matching for small numbers and timestamps

--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="%PUBLIC_URL%/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="Typed Schema, Model and Script Generator!" />
@@ -43,6 +43,13 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>DataAnalyzer.app Code Generator</title>
+    <meta property="og:title" content="DataAnalyzer.app Code Generator" />
+    <meta
+      property="og:description"
+      content="Convert any JSON (or CSV) data into type-aware code for TypeScript, MongoDB, Postgres, and more!"
+    />
+    <meta property="og:image" content="%PUBLIC_URL%/images/DataAnalyzerDualColor.png" />
+    <meta property="og:url" content="%PUBLIC_URL%" />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
