--- a/public/index.html
+++ b/public/index.html
@@ -50,6 +50,19 @@
     />
     <meta property="og:image" content="%PUBLIC_URL%/images/DataAnalyzerDualColor.png" />
     <meta property="og:url" content="%PUBLIC_URL%" />
+    <style>
+      .disclaimer {
+        position: fixed;
+        font-size: 0.7rem;
+        font-weight: 200;
+        color: rgba(181, 181, 181, 0.9);
+        margin: 0 auto;
+        /* bottom: 0; */
+        right: 0;
+        padding-right: 1rem;
+        pointer-events: none;
+      }
+    </style>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
@@ -64,5 +77,9 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    <section class="disclaimer">
+      © 2020-2021 Dan Levy. For educational use only. All trademarks, service marks and company
+      names are the property of their respective owners.
+    </section>
   </body>
 </html>
