Adding social/twitter preview

--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,10 @@
     <link rel="icon" href="%PUBLIC_URL%/images/DataAnalyzerDualColor.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta name="description" content="Typed Schema, Model and Script Generator!" />
+    <meta
+      name="description"
+      content="Convert any JSON (or CSV) data into type-aware code for TypeScript, MongoDB, Postgres, and more!"
+    />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -43,13 +46,15 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>DataAnalyzer.app Code Generator</title>
-    <meta property="og:title" content="DataAnalyzer.app Code Generator" />
+    <meta property="og:title" content="DataAnalyzer.app - JSON to Code Generator" />
     <meta
       property="og:description"
       content="Convert any JSON (or CSV) data into type-aware code for TypeScript, MongoDB, Postgres, and more!"
     />
-    <meta property="og:image" content="%PUBLIC_URL%/images/DataAnalyzerDualColor.png" />
+    <meta property="og:image" content="%PUBLIC_URL%/images/DataAnalyzerScreenshot-TypeScript.png" />
     <meta property="og:url" content="%PUBLIC_URL%" />
+    <meta name="twitter:creator" content="@justsml" />
+    <meta name="twitter:card" content="summary_large_image" />
     <style>
       .disclaimer {
         position: fixed;
@@ -61,6 +66,7 @@
         right: 0;
         padding-right: 1rem;
         pointer-events: none;
+        z-index: -1;
       }
     </style>
   </head>
