updated preview image

--- a/public/index.html
+++ b/public/index.html
@@ -46,15 +46,23 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>DataAnalyzer.app Code Generator</title>
-    <meta property="og:title" content="DataAnalyzer.app - JSON to Code Generator" />
+    <meta name="og:title" content="DataAnalyzer.app - JSON to Code Generator" />
     <meta
-      property="og:description"
+      name="og:description"
       content="Convert any JSON (or CSV) data into type-aware code for TypeScript, MongoDB, Postgres, and more!"
     />
-    <meta property="og:image" content="%PUBLIC_URL%/images/DataAnalyzerScreenshot-TypeScript.png" />
-    <meta property="og:url" content="%PUBLIC_URL%" />
+    <meta name="og:image" content="%PUBLIC_URL%/images/DataAnalyzerScreenshot-TypeScript.png" />
+    <meta name="og:url" content="%PUBLIC_URL%" />
     <meta name="twitter:creator" content="@justsml" />
     <meta name="twitter:card" content="summary_large_image" />
+    <meta
+      name="twitter:image"
+      content="%PUBLIC_URL%/images/DataAnalyzerScreenshot-TypeScript.png"
+    />
+    <meta
+      name="twitter:image:alt"
+      content="Preview of automatically generated TypeScript from input JSON or CSV data."
+    />
     <style>
       .disclaimer {
         position: fixed;
