Updated preview image, meta tags

--- a/public/index.html
+++ b/public/index.html
@@ -15,15 +15,6 @@
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
-
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
     <link
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
@@ -36,28 +27,24 @@
       integrity="sha256-/4UzLn5f/mN0z/yFORPgU0Q+4NroVby3o9b5z887fuA="
       crossorigin="anonymous"
     />
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
-
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
-    <title>DataAnalyzer.app Code Generator</title>
+    <title>DataAnalyzer.app - JSON to Code Generator</title>
     <meta name="og:title" content="DataAnalyzer.app - JSON to Code Generator" />
     <meta
       name="og:description"
       content="Convert any JSON (or CSV) data into type-aware code for TypeScript, MongoDB, Postgres, and more!"
     />
-    <meta name="og:image" content="%PUBLIC_URL%/images/DataAnalyzerScreenshot-TypeScript.png" />
+    <meta
+      name="og:image"
+      content="%PUBLIC_URL%/images/DataAnalyzerScreen_TypeScript-SocialImage.png"
+    />
+    <meta name="og:image:width" content="1200" />
+    <meta name="og:image:height" content="630" />
     <meta name="og:url" content="%PUBLIC_URL%" />
     <meta name="twitter:creator" content="@justsml" />
     <meta name="twitter:card" content="summary_large_image" />
     <meta
       name="twitter:image"
-      content="%PUBLIC_URL%/images/DataAnalyzerScreenshot-TypeScript.png"
+      content="%PUBLIC_URL%/images/DataAnalyzerScreen_TypeScript-SocialImage.png"
     />
     <meta
       name="twitter:image:alt"
@@ -81,16 +68,7 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
 
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
-
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
     <section class="disclaimer">
       © 2020-2021 Dan Levy. For educational use only. All trademarks, service marks and company
       names are the property of their respective owners.
