--- a/public/index.html
+++ b/public/index.html
@@ -28,26 +28,26 @@
       crossorigin="anonymous"
     />
     <title>DataAnalyzer.app - JSON to Code Generator</title>
-    <meta name="og:title" content="DataAnalyzer.app - JSON to Code Generator" />
+    <meta property="og:title" content="DataAnalyzer.app - JSON to Code Generator" />
     <meta
-      name="og:description"
+      property="og:description"
       content="Convert any JSON (or CSV) data into type-aware code for TypeScript, MongoDB, Postgres, and more!"
     />
     <meta
-      name="og:image"
+      property="og:image"
       content="%PUBLIC_URL%/images/DataAnalyzerScreen_TypeScript-SocialImage.png"
     />
-    <meta name="og:image:width" content="1200" />
-    <meta name="og:image:height" content="630" />
-    <meta name="og:url" content="%PUBLIC_URL%" />
-    <meta name="twitter:creator" content="@justsml" />
-    <meta name="twitter:card" content="summary_large_image" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
+    <meta property="og:url" content="%PUBLIC_URL%" />
+    <meta property="twitter:creator" content="@justsml" />
+    <meta property="twitter:card" content="summary_large_image" />
     <meta
-      name="twitter:image"
+      property="twitter:image"
       content="%PUBLIC_URL%/images/DataAnalyzerScreen_TypeScript-SocialImage.png"
     />
     <meta
-      name="twitter:image:alt"
+      property="twitter:image:alt"
       content="Preview of automatically generated TypeScript from input JSON or CSV data."
     />
     <style>
