add og:type meta tag

--- a/public/index.html
+++ b/public/index.html
@@ -33,6 +33,7 @@
       property="og:description"
       content="Convert any JSON (or CSV) data into type-aware code for TypeScript, MongoDB, Postgres, and more!"
     />
+    <meta property="og:type" content="website" />
     <meta
       property="og:image"
       content="%PUBLIC_URL%/images/DataAnalyzerScreen_TypeScript-SocialImage.png"
@@ -47,7 +48,7 @@
       content="%PUBLIC_URL%/images/DataAnalyzerScreen_TypeScript-SocialImage.png"
     />
     <meta
-      property="twitter:image:alt"
+      property="og:image:alt"
       content="Preview of automatically generated TypeScript from input JSON or CSV data."
     />
     <style>
