--- a/public/index.html
+++ b/public/index.html
@@ -34,15 +34,28 @@
       content="Convert any JSON (or CSV) data into type-aware code for TypeScript, MongoDB, Postgres, and more!"
     />
     <meta property="og:type" content="website" />
-    <meta
-      property="og:image"
-      content="%PUBLIC_URL%/images/DataAnalyzerScreen_TypeScript-SocialImage.png"
-    />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
     <meta property="og:url" content="%PUBLIC_URL%" />
     <meta property="twitter:creator" content="@justsml" />
     <meta property="twitter:card" content="summary_large_image" />
+
+    <meta
+      property="og:image"
+      content="%PUBLIC_URL%/images/DataAnalyzerScreenshot-Main-Zoomed.png"
+    />
+    <meta
+      property="twitter:image"
+      content="%PUBLIC_URL%/images/DataAnalyzerScreenshot-Main-Zoomed.png"
+    />
+    <meta
+      property="og:image:alt"
+      content="Preview of automatic data inspector & detector, can generate code for TypeScript and various Databases."
+    />
+    <!-- <meta
+      property="og:image"
+      content="%PUBLIC_URL%/images/DataAnalyzerScreen_TypeScript-SocialImage.png"
+    />
     <meta
       property="twitter:image"
       content="%PUBLIC_URL%/images/DataAnalyzerScreen_TypeScript-SocialImage.png"
@@ -50,7 +63,7 @@
     <meta
       property="og:image:alt"
       content="Preview of automatically generated TypeScript from input JSON or CSV data."
-    />
+    /> -->
     <style>
       .disclaimer {
         position: fixed;
