added logging info

--- a/public/index.html
+++ b/public/index.html
@@ -78,9 +78,20 @@
         z-index: -1;
       }
     </style>
+
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-YH0ZZHKEVM"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag('js', new Date());
+      gtag('config', 'G-YH0ZZHKEVM');
+    </script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
+
     <div id="root"></div>
 
     <section class="disclaimer">
