--- a/public/index.html
+++ b/public/index.html
@@ -36,6 +36,8 @@
     <meta property="og:type" content="website" />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
+    <meta property="og:image:type" content="image/png" />
+
     <meta property="og:url" content="%PUBLIC_URL%" />
     <meta property="twitter:creator" content="@justsml" />
     <meta property="twitter:card" content="summary_large_image" />
