--- a/public/index.html
+++ b/public/index.html
@@ -34,9 +34,6 @@
       content="Convert any JSON (or CSV) data into type-aware code for TypeScript, MongoDB, Postgres, and more!"
     />
     <meta property="og:type" content="website" />
-    <meta property="og:image:width" content="1200" />
-    <meta property="og:image:height" content="630" />
-    <meta property="og:image:type" content="image/png" />
 
     <meta property="og:url" content="%PUBLIC_URL%" />
     <meta property="twitter:creator" content="@justsml" />
@@ -46,14 +43,14 @@
       property="og:image"
       content="%PUBLIC_URL%/images/DataAnalyzerScreenshot-Main-Zoomed.png"
     />
-    <meta
-      property="twitter:image"
-      content="%PUBLIC_URL%/images/DataAnalyzerScreenshot-Main-Zoomed.png"
-    />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
+    <meta property="og:image:type" content="image/png" />
     <meta
       property="og:image:alt"
       content="Preview of automatic data inspector & detector, can generate code for TypeScript and various Databases."
     />
+    <meta property="fb:app_id" content="863108964261458" />
     <!-- <meta
       property="og:image"
       content="%PUBLIC_URL%/images/DataAnalyzerScreen_TypeScript-SocialImage.png"
