fixed tracking api ga->gtag

--- a/public/index.html
+++ b/public/index.html
@@ -48,7 +48,7 @@
     <meta property="og:image:type" content="image/png" />
     <meta
       property="og:image:alt"
-      content="Preview of automatic data inspector & detector, can generate code for TypeScript and various Databases."
+      content="Data inspector & detector for generating code for TypeScript, Postgres and more."
     />
     <meta property="fb:app_id" content="863108964261458" />
     <!-- <meta
