Fixed so much bugs!

--- a/public/index.html
+++ b/public/index.html
@@ -70,11 +70,12 @@
         font-weight: 200;
         color: rgba(181, 181, 181, 0.9);
         margin: 0 auto;
-        /* bottom: 0; */
+        bottom: 0;
         right: 0;
         padding-right: 1rem;
         pointer-events: none;
         z-index: -1;
+        /* visibility: hidden; */
       }
     </style>
 
@@ -94,8 +95,8 @@
     <div id="root"></div>
 
     <section class="disclaimer">
-      © 2020-2021 Dan Levy. For educational use only. All trademarks, service marks and company
-      names are the property of their respective owners.
+      © 2020-2021 Dan Levy. For educational use only. All trademarks, service marks and
+      company names are the property of their respective owners.
     </section>
   </body>
 </html>
