--- a/public/index.html
+++ b/public/index.html
@@ -95,8 +95,8 @@
     <div id="root"></div>
 
     <section class="disclaimer">
-      © 2020-2021 Dan Levy. For educational use only. All trademarks, service marks and
-      company names are the property of their respective owners.
+      © 2020-2021 Dan Levy. All trademarks, service marks and company names are the
+      property of their respective owners.
     </section>
   </body>
 </html>
