improved caching and updated onProgress implementation

--- a/public/index.html
+++ b/public/index.html
@@ -33,7 +33,7 @@
       crossorigin="anonymous"
     /> -->
     <title>DataAnalyzer.app - JSON to Code Generator</title>
-    <meta property="og:title" content="DataAnalyzer.app - JSON to Code Generator" />
+    <meta property="og:title" content="DataAnalyzer.app - Data to Code Generator" />
     <meta
       property="og:description"
       content="Convert any JSON (or CSV) data into type-aware code for TypeScript, MongoDB, Postgres, and more!"
