Improved lighthouse score

--- a/public/index.html
+++ b/public/index.html
@@ -36,7 +36,7 @@
     <meta property="og:title" content="DataAnalyzer.app - Data to Code Generator" />
     <meta
       property="og:description"
-      content="Convert any JSON (or CSV) data into type-aware code for TypeScript, MongoDB, Postgres, and more!"
+      content="Convert any JSON (or CSV) data into type-aware code for TypeScript, GoLang, MongoDB, Postgres, and more!"
     />
     <meta property="og:type" content="website" />
 
