--- a/public/index.html
+++ b/public/index.html
@@ -33,10 +33,10 @@
       crossorigin="anonymous"
     /> -->
     <title>DataAnalyzer.app - JSON to Code Generator</title>
-    <meta property="og:title" content="DataAnalyzer.app - JSON to Code Generator" />
+    <meta property="og:title" content="DataAnalyzer.app - Data to Code Generator" />
     <meta
       property="og:description"
-      content="Convert any JSON (or CSV) data into type-aware code for TypeScript, MongoDB, Postgres, and more!"
+      content="Convert any JSON (or CSV) data into type-aware code for TypeScript, GoLang, MongoDB, Postgres, and more!"
     />
     <meta property="og:type" content="website" />
 
